--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ https://templatemo.com/tm-557-grad-school
               <article id='tabs-3'>
                 <div class="row">
                   <div class="col-md-6">
-                    <img src="assets/images/umpp.jpg" alt="">
+                    <img src="assets/images/UMPP.jpg" alt="">
                   </div>
                   <div class="col-md-6">
                     <h4>PENDIDIKAN</h4>
