--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ https://templatemo.com/tm-557-grad-school
               <h6>SELAMAT DATANG DI</h6>
               <h2><em>ALFIN</em> WEB</h2>
               <div class="main-button">
-                  <a href="assets/images/cv1.jpg" class="btn btn-warning py-3 px-4 me-5">Lihat CV</a>
+                  <a href="assets/images/maintenance.jpg" class="btn btn-warning py-3 px-4 me-5">Lihat CV</a>
               </div>
           </div>
       </div>
